# to-text

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  plan.md  plan_v1.md  pyproject.toml  speaker-labeling-plan.md
docs/: pipeline-details.md
examples/: README.md  source.vtt
examples/example1/: output-deepseek.md  output-gemma4.md  transcript.json
examples/example2/: diarization.json  diarization_transcript.json  theo-asks-joe-if-he-thinks-epstein-is-still-alive-deepseek.md  transcript.json
plan-idea/: diarization-merge-enhancements.md  next-steps.md  podbook-pipeline-improvement-2026-05-13.md
podbook/: logging.py  models.py  pipeline.py
podbook/ai/: cleanup.py  context.py  speakers.py  summarize.py
podbook/ai/providers/: anthropic.py  base.py  ollama.py  openai.py
podbook/cli/: main.py
podbook/ebook/: epub.py  markdown.py
podbook/sources/: local.py  rss.py  webpage.py  youtube.py
podbook/transcript/: chunking.py  diarize.py  normalize.py  preprocess.py  subtitles.py  whisper.py
scripts/: README.md  merge_diarization.py  run_with_diarization.py
tests/: test_chunking.py  test_epub.py  test_markdown.py  test_normalize.py  test_preprocess.py
