[project]
name = "podbook"
version = "0.1.0"
description = "Podcast to Ebook Pipeline"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "yt-dlp>=2025.4",
    "pywhispercpp>=1.2",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "pydantic>=2.10",
    "rich>=13.9",
    "jinja2>=3.1",
    "markdown>=3.7",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.50"]
ollama = ["ollama>=0.4"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
podbook = "podbook.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podbook"]
